--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.1.1",
     "ejs": "*",
     "stylus": "*" ,
-    "sendgrid": "0.2.1"
+    "sendgrid": "0.2.1",
+    "mongojs" : "*"
   }
 }
